update bienen-alerts and upload other dashboards, alerts, contact-points and notifications-policies

--- a/bienen-alerts-each-minute.yaml
+++ b/bienen-alerts-each-minute.yaml
@@ -2,7 +2,7 @@ apiVersion: 1
 groups:
     - orgId: 1
       name: each minute
-      folder: Bienen-Alerts
+      folder: Bienen
       interval: 1m
       rules:
         - uid: ddx5yjhxzsbgga
